--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
-/**{
+*{
 		outline:1px solid red;
-	}*/
+	}
 
 html body{
 	width: 100%;
-	height: 100%;
+	/*min-height:100%;*/
+	margin:0;
+	padding:0;
+	height:100%;
 }
 
 body {
 	margin: 0 auto;
 	/*background-color: blue;*/
+	height: 100%;
 }
 
 .space {
@@ -53,6 +57,35 @@ h2 {
 	left: 548px;
 	margin: 0px;
 	z-index: 100;
+}
+
+h3 {
+	float: left;
+	padding: 0 0 0 0px;
+	font-size: 1.5em;
+	color: #363636;
+	font-family: 'PT Sans Narrow', sans-serif;
+	font-weight: 700;
+	margin-top: 0px;
+}
+
+h4 {
+	float: right;
+	padding: 0 0px 0 0px;
+	font-size: 1em;
+	color: #636363;
+	font-family: 'PT Sans Narrow', sans-serif;
+	font-weight: 400;
+	margin-top: 7px;
+}
+
+.description {
+	font-family: 'PT Sans Narrow', sans-serif;
+	font-weight: 400;
+	padding: 0 0 0 0px;
+	height: 130px;
+	clear:both;
+
 }
 
 .second {
@@ -124,14 +157,19 @@ h2 {
 .wrapper{
 	float: left;
 	margin: 0 auto;
+	height: 100%;
 
 }
 
 .wrapperproject {
-	float: left;
-	margin: 0 auto;
+	position: absolute;
 	/*background-color: hsla(210, 29%, 29%, 0.6);*/
-	border: solid 1px #34495e;
+	/*border: solid 1px #34495e;
+	background-color: #ccc;*/
+	width: 1280px;
+	height: 100%;
+
+	
 	
 }
 
@@ -179,17 +217,27 @@ h2 {
 .bottomside2{
 	float:left;
 	margin-top: 50px;
-	margin-left: 50px;
-	width: 200px;
-	height: 300px;
+	margin-left: 32px;
+	width: 245px;
+	height: 30px;
 	z-index: 102;
 	right: 0px;
+	border-top: double #34495e;
+	border-bottom: double #34495e;
 }
 
-.description {
-	height: 130px;
-
+.bottomside3{
+	float:left;
+	margin-top: 7px;
+	margin-left: 32px;
+	width: 245px;
+	/*overflow: visible;*/
+	z-index: 102;
+	right: 0px;
+	/*border-top: double #34495e;*/
+	/*border-bottom: double #34495e;*/
 }
+
 
 .nav {
 	/*float: right;*/
@@ -231,5 +279,59 @@ li {
 	font-size: .5em;
 	width: 100px;
 
+}
+
+.slider {
+    max-width: 320px;
+    height: 500px;
+    position: relative;
+    z-index: 1;
+}
+
+.slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 320px;
+    z-index: 1;
+}
+
+}
+
+.arrow {
+    position: absolute;
+    z-index: 1002;
+    display: block;
+    top: 50%;
+    margin-top: -35px;
+    width: 36px;
+    height: 71px;
+    outline: none;
+    cursor: pointer;
+    background: url(../assets/img/blank.gif) no-repeat;
+}
+
+.arrow.prev {
+    opacity: 0.2;
+    left: 20px;
+    background-image: url(../assets/img/paddle_prev_999.png);
+    transition: 0.2s linear all;
+}
+
+.arrow.next {
+    opacity: 0.2;
+    right: 20px;
+    background-image: url(../assets/img/paddle_next_999.png);
+    transition: 0.2s linear all;
+}
+
+.arrow.prev:hover {
+    opacity: 1;
+    background-image: url(../assets/img/paddle_prev_fff.png);
+}
+
+.arrow.next:hover {
+    opacity: 1;
+    background-image: url(../assets/img/paddle_next_fff.png);
 }
 
