--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
+/**{
 		outline:1px solid red;
-	}
+	}*/
 
 html body{
 	width: 100%;
@@ -62,11 +62,11 @@ h2 {
 h3 {
 	float: left;
 	padding: 0 0 0 0px;
-	font-size: 1.5em;
+	font-size: 1.3em;
 	color: #363636;
 	font-family: 'PT Sans Narrow', sans-serif;
 	font-weight: 700;
-	margin-top: 0px;
+	margin-top: 2px;
 }
 
 h4 {
@@ -79,7 +79,7 @@ h4 {
 	margin-top: 7px;
 }
 
-.description {
+h5 {
 	font-family: 'PT Sans Narrow', sans-serif;
 	font-weight: 400;
 	padding: 0 0 0 0px;
@@ -296,10 +296,8 @@ li {
     z-index: 1;
 }
 
-}
-
 .arrow {
-    position: absolute;
+    position: fixed;
     z-index: 1002;
     display: block;
     top: 50%;
@@ -308,30 +306,33 @@ li {
     height: 71px;
     outline: none;
     cursor: pointer;
-    background: url(../assets/img/blank.gif) no-repeat;
+    background: url(img/blank.gif) no-repeat;
+    z-index: 105;
 }
 
 .arrow.prev {
-    opacity: 0.2;
+    opacity: 0.8;
     left: 20px;
-    background-image: url(../assets/img/paddle_prev_999.png);
+    background-image: url(img/paddle_prev_999.png);
     transition: 0.2s linear all;
 }
 
 .arrow.next {
-    opacity: 0.2;
+    opacity: 0.8;
     right: 20px;
-    background-image: url(../assets/img/paddle_next_999.png);
+    background-image: url(img/paddle_next_999.png);
     transition: 0.2s linear all;
 }
 
 .arrow.prev:hover {
     opacity: 1;
-    background-image: url(../assets/img/paddle_prev_fff.png);
+    background-image: url(img/paddle_prev_fff.png);
 }
 
 .arrow.next:hover {
     opacity: 1;
-    background-image: url(../assets/img/paddle_next_fff.png);
+    background-image: url(img/paddle_next_fff.png);
+}
+
 }
 
